--- a/apps/backend/src/templates/mail/assets/css/styles.css
+++ b/apps/backend/src/templates/mail/assets/css/styles.css
@@ -67,3 +67,25 @@ a {
   color: #3498db;
   text-decoration: underline;
 }
+
+.button {
+  box-sizing: border-box;
+  position: relative;
+  -webkit-text-size-adjust: none;
+  border-radius: 4px;
+  color: #fff;
+  display: inline-block;
+  overflow: hidden;
+  text-decoration: none;
+  background-color: #2d3748;
+  border-bottom: 8px solid #2d3748;
+  border-left: 18px solid #2d3748;
+  border-right: 18px solid #2d3748;
+  border-top: 8px solid #2d3748;
+}
+
+@media only screen and (max-width: 500px) {
+  .button {
+    width: 100% !important;
+  }
+}
