--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -6,7 +6,6 @@ html {
 
 body {
   margin: 0;
-  min-height: 100%;
   font-weight: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -15,4 +14,10 @@ body {
 html,
 body {
   height: 100%;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
 }
